Added Fries Recepie and Index Link

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en"> 
     <head>
         <meta charset="utf-8">
-        <title>My First Webpage</title>
+        <title>Recipes</title>
     </head>
-    
-    <body>
+
+    <body> 
+     <h1>Odin Recipes</h1>
+     <a href="recipes/Baked Mac.html">Baked Mac</a>
+     <a href="recipes/Wings.html">Wings</a>
+     <h2></h2>
     </body>
 </html>
