--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
 
     <body> 
-     <h1>Odin Recipes</h1>
-     <a href="recipes/Baked Mac.html">Baked Mac</a>
+     <h1 id='header'>Odin Recipes</h1>
+    <img src="https://assets.simpleviewinc.com/simpleview/image/upload/c_limit,h_1200,q_75,w_1200/v1/clients/oakland/Home_of_Chicken_and_Waffes_cefacf32-24fe-4aeb-9a3c-1c1a43e02df4.jpg" style="width:800px;height:450px;">
+    <div>
+    <a href="recipes/Baked Mac.html">Baked Mac</a>
      <a href="recipes/Wings.html">Wings</a>
-     <h2></h2>
+     <a href="recipes/fries.html">Fries</a>
+    </div>
+    <a href="#header">Return to top</a>
     </body>
 </html>
