--- a/recipes/Wings.html
+++ b/recipes/Wings.html
@@ -19,12 +19,12 @@
             <li>Dredge chicken wings into the egg mixture then into the flour. Place wings 3 at a time into the hot oil and cook for 8 to 10 minutes, turning occasionally, until cooked through and golden brown. Remove to a paper towel lined sheet tray. Make sure oil returns to temperature before adding the next batch. Sprinkle the wings with the reserved seasoning for extra hot wings.</li>
             <li>Serve with Spicy Dipping Sauce.</li>
             <h3>spicy dippin sauce:</h3>
-            <li>Mix all the ingredients together in a small bowl.
-            </li>
+            <li>Mix all the ingredients together in a small bowl.</li>
         </ol>
         <ul>
-            <li><a href="recipes/index.html">Home</a></li>
-            <li><a href="recipes/Baked Mac.html">Baked Mac</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="Baked Mac.html">Baked Mac</a></li>
+            <li><a href="fries.html">Fries</a></li>
         </ul>
     </body>
 </html>
