--- a/recipes/fries.html
+++ b/recipes/fries.html
@@ -19,9 +19,9 @@
         <li><strong>Place them on paper towels</strong> and sprinkle immediately with salt. Serve with ketchup! </li>
     </ol>
     <ul>
-        <li><a href=",,/index.html">Home</a></li>
-        <li><a href="recipes/Baked Mac.html">Baked Mac</a></li>
-        <li><a href="recipes/Wings.html">Wings</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="Baked Mac.html">Baked Mac</a></li>
+        <li><a href="Wings.html">Wings</a></li>
     </ul>
 </body>
 </html>
