changed basic code

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/button.css">
     </head>
 
     <body> 
+   <a href="index.html">
+    <button id="home" class="home">
+    <img src="Mc28.gif" alt="Home button spinning globe">
+   </button>
+    </a>
      <h1 id='header'>Odin Recipes</h1>
     <img src="https://assets.simpleviewinc.com/simpleview/image/upload/c_limit,h_1200,q_75,w_1200/v1/clients/oakland/Home_of_Chicken_and_Waffes_cefacf32-24fe-4aeb-9a3c-1c1a43e02df4.jpg" style="width:800px;height:450px;">
     <div>
