--- a/recipes/Wings.html
+++ b/recipes/Wings.html
@@ -4,8 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>Wings</title>
+        <link rel="stylesheet" href="../styles/button.css">
     </head>
     <body>
+        <a href="../index.html">
+            <button id="home" class="home">
+            <img src="https://dwvo2npct47gg.cloudfront.net/gifs/awge-home.gif" alt="Home button spinning globe">
+           </button>
+        </a>
         <h1>Wings Recipe</h1>
         <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2008/3/7/0/NY0105_Pats-Spicy-Fried-Wings.jpg.rend.hgtvcom.686.515.suffix/1371585639157.jpeg" alt="pic of yummy wings">
         <h2>Wings</h1>
